chore(html): Final design implemented, login alignment issue resolved, summary nav in-progress

--- a/learningmachines/searcher/static/searcher/css/momstyles.css
+++ b/learningmachines/searcher/static/searcher/css/momstyles.css
@@ -101,7 +101,11 @@
      font-weight: 700;
  }
  /* Header */
- 
+ .navbar{
+    display: flex;
+    justify-content: space-between;
+ }
+
  header nav {
      border-bottom: 1px solid #DDDDDD;
  }
